concord_macros/tests/dsl/fail/fail_duplicate_defaults.stderr
error: multiple default blocks are not allowed in the current DSL
  --> tests/dsl/fail/fail_duplicate_defaults.rs:11:9
   |
11 |         defaults {
   |         ^^^^^^^^
